YPlugin/output/impexParser.java
// $ANTLR 3.4 /work/projects/YPlugin/impex.g 2012-09-06 21:00:02

  package com.lambda.plugin.impex.editor.model.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class impexParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGNEMENT", "Alias", "AllowNull", "BatchMode", "Bool", "BoolAttribModifier", "BoolHeaderModifier", "CacheUnique", "Char", "Comma", "Comment", "ComplexArgumentRef", "Digit", "Dollar", "DoubleQuote", "Equals", "ForceWrite", "Hash", "IgnoreKeyCase", "IgnoreNull", "Insert", "InsertUpdate", "Int", "IntAttribModifier", "LeftBracket", "LeftParenthesis", "Letter", "LineContinuation", "MacroDefinition", "MacroIdentifier", "NewLine", "Pos", "Processor", "Remove", "RightBracket", "RightParenthesis", "Semicolon", "Underscore", "Unique", "Update", "Virtual", "Word", "WordAttribModifier", "WordHeaderModifier", "Ws"
    };

    public static final int EOF=-1;
    public static final int ASSIGNEMENT=4;
    public static final int Alias=5;
    public static final int AllowNull=6;
    public static final int BatchMode=7;
    public static final int Bool=8;
    public static final int BoolAttribModifier=9;
    public static final int BoolHeaderModifier=10;
    public static final int CacheUnique=11;
    public static final int Char=12;
    public static final int Comma=13;
    public static final int Comment=14;
    public static final int ComplexArgumentRef=15;
    public static final int Digit=16;
    public static final int Dollar=17;
    public static final int DoubleQuote=18;
    public static final int Equals=19;
    public static final int ForceWrite=20;
    public static final int Hash=21;
    public static final int IgnoreKeyCase=22;
    public static final int IgnoreNull=23;
    public static final int Insert=24;
    public static final int InsertUpdate=25;
    public static final int Int=26;
    public static final int IntAttribModifier=27;
    public static final int LeftBracket=28;
    public static final int LeftParenthesis=29;
    public static final int Letter=30;
    public static final int LineContinuation=31;
    public static final int MacroDefinition=32;
    public static final int MacroIdentifier=33;
    public static final int NewLine=34;
    public static final int Pos=35;
    public static final int Processor=36;
    public static final int Remove=37;
    public static final int RightBracket=38;
    public static final int RightParenthesis=39;
    public static final int Semicolon=40;
    public static final int Underscore=41;
    public static final int Unique=42;
    public static final int Update=43;
    public static final int Virtual=44;
    public static final int Word=45;
    public static final int WordAttribModifier=46;
    public static final int WordHeaderModifier=47;
    public static final int Ws=48;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public impexParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public impexParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return impexParser.tokenNames; }
    public String getGrammarFileName() { return "/work/projects/YPlugin/impex.g"; }


    public static class field_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "field"
    // /work/projects/YPlugin/impex.g:144:1: field : ( ( DoubleQuote ( Char | Comma | DoubleQuote DoubleQuote | NewLine | MacroDefinition )* DoubleQuote ) | ( Char | MacroDefinition )+ );
    public final impexParser.field_return field() throws RecognitionException {
        impexParser.field_return retval = new impexParser.field_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token DoubleQuote1=null;
        Token Char2=null;
        Token Comma3=null;
        Token DoubleQuote4=null;
        Token DoubleQuote5=null;
        Token NewLine6=null;
        Token MacroDefinition7=null;
        Token DoubleQuote8=null;
        Token set9=null;

        CommonTree DoubleQuote1_tree=null;
        CommonTree Char2_tree=null;
        CommonTree Comma3_tree=null;
        CommonTree DoubleQuote4_tree=null;
        CommonTree DoubleQuote5_tree=null;
        CommonTree NewLine6_tree=null;
        CommonTree MacroDefinition7_tree=null;
        CommonTree DoubleQuote8_tree=null;
        CommonTree set9_tree=null;

        try {
            // /work/projects/YPlugin/impex.g:145:2: ( ( DoubleQuote ( Char | Comma | DoubleQuote DoubleQuote | NewLine | MacroDefinition )* DoubleQuote ) | ( Char | MacroDefinition )+ )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==DoubleQuote) ) {
                alt3=1;
            }
            else if ( (LA3_0==Char||LA3_0==MacroDefinition) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // /work/projects/YPlugin/impex.g:145:4: ( DoubleQuote ( Char | Comma | DoubleQuote DoubleQuote | NewLine | MacroDefinition )* DoubleQuote )
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    // /work/projects/YPlugin/impex.g:145:4: ( DoubleQuote ( Char | Comma | DoubleQuote DoubleQuote | NewLine | MacroDefinition )* DoubleQuote )
                    // /work/projects/YPlugin/impex.g:145:5: DoubleQuote ( Char | Comma | DoubleQuote DoubleQuote | NewLine | MacroDefinition )* DoubleQuote
                    {
                    DoubleQuote1=(Token)match(input,DoubleQuote,FOLLOW_DoubleQuote_in_field791); 
                    DoubleQuote1_tree = 
                    (CommonTree)adaptor.create(DoubleQuote1)
                    ;
                    adaptor.addChild(root_0, DoubleQuote1_tree);


                    // /work/projects/YPlugin/impex.g:145:17: ( Char | Comma | DoubleQuote DoubleQuote | NewLine | MacroDefinition )*
                    loop1:
                    do {
                        int alt1=6;
                        switch ( input.LA(1) ) {
                        case DoubleQuote:
                            {
                            int LA1_1 = input.LA(2);

                            if ( (LA1_1==DoubleQuote) ) {
                                alt1=3;
                            }


                            }
                            break;
                        case Char:
                            {
                            alt1=1;
                            }
                            break;
                        case Comma:
                            {
                            alt1=2;
                            }
                            break;
                        case NewLine:
                            {
                            alt1=4;
                            }
                            break;
                        case MacroDefinition:
                            {
                            alt1=5;
                            }
                            break;

                        }

                        switch (alt1) {
                    	case 1 :
                    	    // /work/projects/YPlugin/impex.g:145:18: Char
                    	    {
                    	    Char2=(Token)match(input,Char,FOLLOW_Char_in_field794); 
                    	    Char2_tree = 
                    	    (CommonTree)adaptor.create(Char2)
                    	    ;
                    	    adaptor.addChild(root_0, Char2_tree);


                    	    }
                    	    break;
                    	case 2 :
                    	    // /work/projects/YPlugin/impex.g:145:25: Comma
                    	    {
                    	    Comma3=(Token)match(input,Comma,FOLLOW_Comma_in_field798); 
                    	    Comma3_tree = 
                    	    (CommonTree)adaptor.create(Comma3)
                    	    ;
                    	    adaptor.addChild(root_0, Comma3_tree);


                    	    }
                    	    break;
                    	case 3 :
                    	    // /work/projects/YPlugin/impex.g:145:33: DoubleQuote DoubleQuote
                    	    {
                    	    DoubleQuote4=(Token)match(input,DoubleQuote,FOLLOW_DoubleQuote_in_field802); 
                    	    DoubleQuote4_tree = 
                    	    (CommonTree)adaptor.create(DoubleQuote4)
                    	    ;
                    	    adaptor.addChild(root_0, DoubleQuote4_tree);


                    	    DoubleQuote5=(Token)match(input,DoubleQuote,FOLLOW_DoubleQuote_in_field804); 
                    	    DoubleQuote5_tree = 
                    	    (CommonTree)adaptor.create(DoubleQuote5)
                    	    ;
                    	    adaptor.addChild(root_0, DoubleQuote5_tree);


                    	    }
                    	    break;
                    	case 4 :
                    	    // /work/projects/YPlugin/impex.g:145:59: NewLine
                    	    {
                    	    NewLine6=(Token)match(input,NewLine,FOLLOW_NewLine_in_field808); 
                    	    NewLine6_tree = 
                    	    (CommonTree)adaptor.create(NewLine6)
                    	    ;
                    	    adaptor.addChild(root_0, NewLine6_tree);


                    	    }
                    	    break;
                    	case 5 :
                    	    // /work/projects/YPlugin/impex.g:145:69: MacroDefinition
                    	    {
                    	    MacroDefinition7=(Token)match(input,MacroDefinition,FOLLOW_MacroDefinition_in_field812); 
                    	    MacroDefinition7_tree = 
                    	    (CommonTree)adaptor.create(MacroDefinition7)
                    	    ;
                    	    adaptor.addChild(root_0, MacroDefinition7_tree);


                    	    }
                    	    break;

                    	default :
                    	    break loop1;
                        }
                    } while (true);


                    DoubleQuote8=(Token)match(input,DoubleQuote,FOLLOW_DoubleQuote_in_field816); 
                    DoubleQuote8_tree = 
                    (CommonTree)adaptor.create(DoubleQuote8)
                    ;
                    adaptor.addChild(root_0, DoubleQuote8_tree);


                    }


                    }
                    break;
                case 2 :
                    // /work/projects/YPlugin/impex.g:145:102: ( Char | MacroDefinition )+
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    // /work/projects/YPlugin/impex.g:145:102: ( Char | MacroDefinition )+
                    int cnt2=0;
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==MacroDefinition) ) {
                            int LA2_2 = input.LA(2);

                            if ( (LA2_2==EOF||LA2_2==Char||(LA2_2 >= Insert && LA2_2 <= InsertUpdate)||(LA2_2 >= LineContinuation && LA2_2 <= MacroDefinition)||LA2_2==NewLine||LA2_2==Remove||LA2_2==Semicolon||LA2_2==Update||LA2_2==Ws) ) {
                                alt2=1;
                            }


                        }
                        else if ( (LA2_0==Char) ) {
                            alt2=1;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // /work/projects/YPlugin/impex.g:
                    	    {
                    	    set9=(Token)input.LT(1);

                    	    if ( input.LA(1)==Char||input.LA(1)==MacroDefinition ) {
                    	        input.consume();
                    	        adaptor.addChild(root_0, 
                    	        (CommonTree)adaptor.create(set9)
                    	        );
                    	        state.errorRecovery=false;
                    	    }
                    	    else {
                    	        MismatchedSetException mse = new MismatchedSetException(null,input);
                    	        throw mse;
                    	    }


                    	    }
                    	    break;

                    	default :
                    	    if ( cnt2 >= 1 ) break loop2;
                                EarlyExitException eee =
                                    new EarlyExitException(2, input);
                                throw eee;
                        }
                        cnt2++;
                    } while (true);


                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "field"


    public static class headerMode_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "headerMode"
    // /work/projects/YPlugin/impex.g:148:1: headerMode : ( Insert | InsertUpdate | Update | Remove );
    public final impexParser.headerMode_return headerMode() throws RecognitionException {
        impexParser.headerMode_return retval = new impexParser.headerMode_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token set10=null;

        CommonTree set10_tree=null;

        try {
            // /work/projects/YPlugin/impex.g:149:2: ( Insert | InsertUpdate | Update | Remove )
            // /work/projects/YPlugin/impex.g:
            {
            root_0 = (CommonTree)adaptor.nil();


            set10=(Token)input.LT(1);

            if ( (input.LA(1) >= Insert && input.LA(1) <= InsertUpdate)||input.LA(1)==Remove||input.LA(1)==Update ) {
                input.consume();
                adaptor.addChild(root_0, 
                (CommonTree)adaptor.create(set10)
                );
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "headerMode"


    public static class headerModeType_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "headerModeType"
    // /work/projects/YPlugin/impex.g:151:1: headerModeType : ( Ws )* headerMode ( Ws )+ Word ( ( Ws )* headerModifier )? ;
    public final impexParser.headerModeType_return headerModeType() throws RecognitionException {
        impexParser.headerModeType_return retval = new impexParser.headerModeType_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token Ws11=null;
        Token Ws13=null;
        Token Word14=null;
        Token Ws15=null;
        impexParser.headerMode_return headerMode12 =null;

        impexParser.headerModifier_return headerModifier16 =null;


        CommonTree Ws11_tree=null;
        CommonTree Ws13_tree=null;
        CommonTree Word14_tree=null;
        CommonTree Ws15_tree=null;

        try {
            // /work/projects/YPlugin/impex.g:152:2: ( ( Ws )* headerMode ( Ws )+ Word ( ( Ws )* headerModifier )? )
            // /work/projects/YPlugin/impex.g:152:4: ( Ws )* headerMode ( Ws )+ Word ( ( Ws )* headerModifier )?
            {
            root_0 = (CommonTree)adaptor.nil();


            // /work/projects/YPlugin/impex.g:152:4: ( Ws )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==Ws) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /work/projects/YPlugin/impex.g:152:4: Ws
            	    {
            	    Ws11=(Token)match(input,Ws,FOLLOW_Ws_in_headerModeType863); 
            	    Ws11_tree = 
            	    (CommonTree)adaptor.create(Ws11)
            	    ;
            	    adaptor.addChild(root_0, Ws11_tree);


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            pushFollow(FOLLOW_headerMode_in_headerModeType866);
            headerMode12=headerMode();

            state._fsp--;

            adaptor.addChild(root_0, headerMode12.getTree());

            // /work/projects/YPlugin/impex.g:152:19: ( Ws )+
            int cnt5=0;
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==Ws) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /work/projects/YPlugin/impex.g:152:19: Ws
            	    {
            	    Ws13=(Token)match(input,Ws,FOLLOW_Ws_in_headerModeType868); 
            	    Ws13_tree = 
            	    (CommonTree)adaptor.create(Ws13)
            	    ;
            	    adaptor.addChild(root_0, Ws13_tree);


            	    }
            	    break;

            	default :
            	    if ( cnt5 >= 1 ) break loop5;
                        EarlyExitException eee =
                            new EarlyExitException(5, input);
                        throw eee;
                }
                cnt5++;
            } while (true);


            Word14=(Token)match(input,Word,FOLLOW_Word_in_headerModeType871); 
            Word14_tree = 
            (CommonTree)adaptor.create(Word14)
            ;
            adaptor.addChild(root_0, Word14_tree);


            // /work/projects/YPlugin/impex.g:152:29: ( ( Ws )* headerModifier )?
            int alt7=2;
            alt7 = dfa7.predict(input);
            switch (alt7) {
                case 1 :
                    // /work/projects/YPlugin/impex.g:152:30: ( Ws )* headerModifier
                    {
                    // /work/projects/YPlugin/impex.g:152:30: ( Ws )*
                    loop6:
                    do {
                        int alt6=2;
                        int LA6_0 = input.LA(1);

                        if ( (LA6_0==Ws) ) {
                            alt6=1;
                        }


                        switch (alt6) {
                    	case 1 :
                    	    // /work/projects/YPlugin/impex.g:152:30: Ws
                    	    {
                    	    Ws15=(Token)match(input,Ws,FOLLOW_Ws_in_headerModeType875); 
                    	    Ws15_tree = 
                    	    (CommonTree)adaptor.create(Ws15)
                    	    ;
                    	    adaptor.addChild(root_0, Ws15_tree);


                    	    }
                    	    break;

                    	default :
                    	    break loop6;
                        }
                    } while (true);


                    pushFollow(FOLLOW_headerModifier_in_headerModeType878);
                    headerModifier16=headerModifier();

                    state._fsp--;

                    adaptor.addChild(root_0, headerModifier16.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "headerModeType"


    public static class headerModifier_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "headerModifier"
    // /work/projects/YPlugin/impex.g:155:1: headerModifier : LeftBracket ( BoolHeaderModifier ( Ws )* Equals ( Ws )* Bool | WordHeaderModifier ( Ws )* Equals ( Ws )* Word ) ( Ws )* RightBracket ;
    public final impexParser.headerModifier_return headerModifier() throws RecognitionException {
        impexParser.headerModifier_return retval = new impexParser.headerModifier_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token LeftBracket17=null;
        Token BoolHeaderModifier18=null;
        Token Ws19=null;
        Token Equals20=null;
        Token Ws21=null;
        Token Bool22=null;
        Token WordHeaderModifier23=null;
        Token Ws24=null;
        Token Equals25=null;
        Token Ws26=null;
        Token Word27=null;
        Token Ws28=null;
        Token RightBracket29=null;

        CommonTree LeftBracket17_tree=null;
        CommonTree BoolHeaderModifier18_tree=null;
        CommonTree Ws19_tree=null;
        CommonTree Equals20_tree=null;
        CommonTree Ws21_tree=null;
        CommonTree Bool22_tree=null;
        CommonTree WordHeaderModifier23_tree=null;
        CommonTree Ws24_tree=null;
        CommonTree Equals25_tree=null;
        CommonTree Ws26_tree=null;
        CommonTree Word27_tree=null;
        CommonTree Ws28_tree=null;
        CommonTree RightBracket29_tree=null;

        try {
            // /work/projects/YPlugin/impex.g:156:2: ( LeftBracket ( BoolHeaderModifier ( Ws )* Equals ( Ws )* Bool | WordHeaderModifier ( Ws )* Equals ( Ws )* Word ) ( Ws )* RightBracket )
            // /work/projects/YPlugin/impex.g:156:4: LeftBracket ( BoolHeaderModifier ( Ws )* Equals ( Ws )* Bool | WordHeaderModifier ( Ws )* Equals ( Ws )* Word ) ( Ws )* RightBracket
            {
            root_0 = (CommonTree)adaptor.nil();


            LeftBracket17=(Token)match(input,LeftBracket,FOLLOW_LeftBracket_in_headerModifier892); 
            LeftBracket17_tree = 
            (CommonTree)adaptor.create(LeftBracket17)
            ;
            adaptor.addChild(root_0, LeftBracket17_tree);


            // /work/projects/YPlugin/impex.g:156:16: ( BoolHeaderModifier ( Ws )* Equals ( Ws )* Bool | WordHeaderModifier ( Ws )* Equals ( Ws )* Word )
            int alt12=2;
            int LA12_0 = input.LA(1);

            if ( (LA12_0==BoolHeaderModifier) ) {
                alt12=1;
            }
            else if ( (LA12_0==WordHeaderModifier) ) {
                alt12=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 12, 0, input);

                throw nvae;

            }
            switch (alt12) {
                case 1 :
                    // /work/projects/YPlugin/impex.g:156:17: BoolHeaderModifier ( Ws )* Equals ( Ws )* Bool
                    {
                    BoolHeaderModifier18=(Token)match(input,BoolHeaderModifier,FOLLOW_BoolHeaderModifier_in_headerModifier895); 
                    BoolHeaderModifier18_tree = 
                    (CommonTree)adaptor.create(BoolHeaderModifier18)
                    ;
                    adaptor.addChild(root_0, BoolHeaderModifier18_tree);


                    // /work/projects/YPlugin/impex.g:156:36: ( Ws )*
                    loop8:
                    do {
                        int alt8=2;
                        int LA8_0 = input.LA(1);

                        if ( (LA8_0==Ws) ) {
                            alt8=1;
                        }


                        switch (alt8) {
                    	case 1 :
                    	    // /work/projects/YPlugin/impex.g:156:36: Ws
                    	    {
                    	    Ws19=(Token)match(input,Ws,FOLLOW_Ws_in_headerModifier897); 
                    	    Ws19_tree = 
                    	    (CommonTree)adaptor.create(Ws19)
                    	    ;
                    	    adaptor.addChild(root_0, Ws19_tree);


                    	    }
                    	    break;

                    	default :
                    	    break loop8;
                        }
                    } while (true);


                    Equals20=(Token)match(input,Equals,FOLLOW_Equals_in_headerModifier900); 
                    Equals20_tree = 
                    (CommonTree)adaptor.create(Equals20)
                    ;
                    adaptor.addChild(root_0, Equals20_tree);


                    // /work/projects/YPlugin/impex.g:156:48: ( Ws )*
                    loop9:
                    do {
                        int alt9=2;
                        int LA9_0 = input.LA(1);

                        if ( (LA9_0==Ws) ) {
                            alt9=1;
                        }


                        switch (alt9) {
                    	case 1 :
                    	    // /work/projects/YPlugin/impex.g:156:48: Ws
                    	    {
                    	    Ws21=(Token)match(input,Ws,FOLLOW_Ws_in_headerModifier903); 
                    	    Ws21_tree = 
                    	    (CommonTree)adaptor.create(Ws21)
                    	    ;
                    	    adaptor.addChild(root_0, Ws21_tree);


                    	    }
                    	    break;

                    	default :
                    	    break loop9;
                        }
                    } while (true);


                    Bool22=(Token)match(input,Bool,FOLLOW_Bool_in_headerModifier906); 
                    Bool22_tree = 
                    (CommonTree)adaptor.create(Bool22)
                    ;
                    adaptor.addChild(root_0, Bool22_tree);


                    }
                    break;
                case 2 :
                    // /work/projects/YPlugin/impex.g:156:59: WordHeaderModifier ( Ws )* Equals ( Ws )* Word
                    {
                    WordHeaderModifier23=(Token)match(input,WordHeaderModifier,FOLLOW_WordHeaderModifier_in_headerModifier910); 
                    WordHeaderModifier23_tree = 
                    (CommonTree)adaptor.create(WordHeaderModifier23)
                    ;
                    adaptor.addChild(root_0, WordHeaderModifier23_tree);


                    // /work/projects/YPlugin/impex.g:156:78: ( Ws )*
                    loop10:
                    do {
                        int alt10=2;
                        int LA10_0 = input.LA(1);

                        if ( (LA10_0==Ws) ) {
                            alt10=1;
                        }


                        switch (alt10) {
                    	case 1 :
                    	    // /work/projects/YPlugin/impex.g:156:78: Ws
                    	    {
                    	    Ws24=(Token)match(input,Ws,FOLLOW_Ws_in_headerModifier912); 
                    	    Ws24_tree = 
                    	    (CommonTree)adaptor.create(Ws24)
                    	    ;
                    	    adaptor.addChild(root_0, Ws24_tree);


                    	    }
                    	    break;

                    	default :
                    	    break loop10;
                        }
                    } while (true);


                    Equals25=(Token)match(input,Equals,FOLLOW_Equals_in_headerModifier915); 
                    Equals25_tree = 
                    (CommonTree)adaptor.create(Equals25)
                    ;
                    adaptor.addChild(root_0, Equals25_tree);


                    // /work/projects/YPlugin/impex.g:156:90: ( Ws )*
                    loop11:
                    do {
                        int alt11=2;
                        int LA11_0 = input.LA(1);

                        if ( (LA11_0==Ws) ) {
                            alt11=1;
                        }


                        switch (alt11) {
                    	case 1 :
                    	    // /work/projects/YPlugin/impex.g:156:90: Ws
                    	    {
                    	    Ws26=(Token)match(input,Ws,FOLLOW_Ws_in_headerModifier918); 
                    	    Ws26_tree = 
                    	    (CommonTree)adaptor.create(Ws26)
                    	    ;
                    	    adaptor.addChild(root_0, Ws26_tree);


                    	    }
                    	    break;

                    	default :
                    	    break loop11;
                        }
                    } while (true);


                    Word27=(Token)match(input,Word,FOLLOW_Word_in_headerModifier921); 
                    Word27_tree = 
                    (CommonTree)adaptor.create(Word27)
                    ;
                    adaptor.addChild(root_0, Word27_tree);


                    }
                    break;

            }


            // /work/projects/YPlugin/impex.g:156:100: ( Ws )*
            loop13:
            do {
                int alt13=2;
                int LA13_0 = input.LA(1);

                if ( (LA13_0==Ws) ) {
                    alt13=1;
                }


                switch (alt13) {
            	case 1 :
            	    // /work/projects/YPlugin/impex.g:156:100: Ws
            	    {
            	    Ws28=(Token)match(input,Ws,FOLLOW_Ws_in_headerModifier924); 
            	    Ws28_tree = 
            	    (CommonTree)adaptor.create(Ws28)
            	    ;
            	    adaptor.addChild(root_0, Ws28_tree);


            	    }
            	    break;

            	default :
            	    break loop13;
                }
            } while (true);


            RightBracket29=(Token)match(input,RightBracket,FOLLOW_RightBracket_in_headerModifier928); 
            RightBracket29_tree = 
            (CommonTree)adaptor.create(RightBracket29)
            ;
            adaptor.addChild(root_0, RightBracket29_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "headerModifier"


    public static class argumentModifier_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

